--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field form-group">
     <%= form.label :message %>
-    <%= form.text_field :message, id: :tweet_message %>
+    <%= form.text_field :message, id: :tweet_message, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= form.label :user_id %>
-    <%= form.number_field :user_id, id: :tweet_user_id %>
+    <%= form.number_field :user_id, id: :tweet_user_id, class: "form-control" %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="actions form-group" >
+    <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
