--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,29 +1,32 @@
-<p id="notice"><%= notice %></p>
+<% if notice != nil %>
+  <p id="notice" class="alert alert-success" role="alert">
+    <%= notice %>
+  </p>
+<% end %>
 
-<h1>Tweets</h1>
+<h1>Tweets Update!</h1>
+<div class='col-md-3 align'>
+  <%= link_to 'New Tweet', new_tweet_path, class: 'btn btn-primary' %>
+</div>
+<br><br>
+<div class='container' id='tweet-block1'>
+  <div class='row'>
+    <div class='col-md-7 marg1'><h3>Tweet</h3></div>
+    <div class='col-md-2'><h3>Tweeter</h3></div>
+  </div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Message</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tweets.each do |tweet| %>
-      <tr>
-        <td><%= tweet.message %></td>
-        <td><%= tweet.user_id %></td>
-        <td><%= link_to 'Show', tweet %></td>
-        <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
-        <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Tweet', new_tweet_path %>
+<div class='container' id='tweet-block2'>
+  <% @tweets.each do |tweet| %>
+    <div class='row marg2'>
+    <hr>
+      <div class='col-md-7 message'><%= tweet.message %></div>
+      <div class='col-md-2 message'><%= tweet.user.username %></div>
+      <div class='col-md-3'>
+        <%= link_to 'Edit', edit_tweet_path(tweet), class: 'btn btn-success btn-sm' %>
+        <%= link_to 'Delete', tweet, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+      </div>
+    </div>
+  <% end %>
+  <hr>
+</div>
