--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -16,12 +16,11 @@
     <%= form.text_field :message, id: :tweet_message, class: "form-control" %>
   </div>
 
-  <div class="field form-group">
-    <%= form.label :user_id %>
-    <%= form.number_field :user_id, id: :tweet_user_id, class: "form-control" %>
+  <div class="field">
+    <%= form.hidden_field :user_id, value: current_user.id %>
   </div>
 
   <div class="actions form-group" >
-    <%= form.submit class: "btn btn-primary" %>
+    <%= form.submit "Tweet it!", class: "btn btn-primary" %>
   </div>
 <% end %>
