--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -21,7 +21,8 @@
     <div class='row marg2'>
     <hr>
       <div class='col-md-7 message'><%= tweet.message %></div>
-      <div class='col-md-2 message'><%= tweet.user.username %></div>
+      <div class='col-md-2 message'><%= link_to tweet.user.username, 
+                                        show_user_path(id: tweet.user.id) %></div>
       <div class='col-md-3'>
         <%= link_to 'Edit', edit_tweet_path(tweet), class: 'btn btn-success btn-sm' %>
         <%= link_to 'Delete', tweet, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
