add URL handling

--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -17,6 +17,6 @@
 <% @user.tweets.each do |tweet| %>
   <div>
     <p>@<%= @user.username %></p>
-    <p><%= tweet.message %></p>
+    <p><%= tweet.message.html_safe %></p>
   </div>
 <% end %>
