bootstrap & styling devise forms

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -18,6 +18,12 @@
  @import "bootstrap";
  @import "font-awesome";
 
+body {
+  background: url(<%#= asset_path "bg.jpg" %>) no-repeat;
+  background-size: cover;
+  opacity: 50%;
+  }
+
  /* Navbar styling */
 .navbar-default .navbar-brand  {
   font-family: 'Coffee House', cursive;
@@ -78,4 +84,20 @@
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+#link {
+  padding-top: 26px;
+  font-size: 20px;
+}
+
+#pad-25 {
+  padding-bottom: 25px;
+}
+
+#pad-50 {
+  padding-top: 19px;
+}
+#pull-right {
+  text-align: right;
 }
