--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Tweets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* Tweets styling */
+.message {
+  font-size: 20px;
+}
+
+.marg1 {
+  padding-left: 70px;
+}
+
+.marg2 {
+  padding-left: 55px;
+}
+
+.align {
+  text-align: right;
+  padding-right: 33px;
+}
