--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,16 @@
+<br>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <h2>Sign up</h2>
+    <div class='row'>
+      <div class="col-md-3" id='pad-25'><h2>Sign up</h2> </div>
+      <div class='col-md-9' id='link'><%= link_to 'Log in', new_user_session_path %></div>
+    </div>    
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true %>
+      <div class="form-group">
+        <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control" %>
       </div>
 
       <div class="form-group">
@@ -30,25 +33,23 @@
         <strong>Upload a Profile Pic:</strong>
         <%= f.file_field :avatar %>
       </div>
-
-      <div class="field">
+      <br>
+      <div class="form-group">
         <%= f.label :password %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "off" %>
+        <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
       </div>
 
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      <div class="form-group">
+        <%= f.label :confirm_password %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Retype Password", class: "form-control" %>
       </div>
 
-      <div class="actions">
-        <%= f.submit "Sign up" %>
+      <div class="form-group">
+        <%= f.submit "Sign up", class: 'btn btn-success' %>
       </div>
     <% end %>
-
-    <%= render "devise/shared/links" %>
   </div>
 </div>
