--- a/app/views/epicenter/followers.html.erb
+++ b/app/views/epicenter/followers.html.erb
@@ -1,8 +1,9 @@
+<br>
 <div class="row">
   <div class="col-md-3">
     <div class="row">
       <div class="col-md-3">
-        <%= image_tag @user.avatar.url, class: "user-pic-stats img-rounded" %>
+        <%= image_tag @user.avatar.url, class: "pic-user-stats" %>
       </div>
       <div class="col-md-9">
         <h3><%= @user.name %></h3>
