--- a/app/views/epicenter/following.html.erb
+++ b/app/views/epicenter/following.html.erb
@@ -1,8 +1,9 @@
+<br>
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-2">
     <div class="row">
       <div class="col-md-3">
-        <%= image_tag @user.avatar.url, class: "user-pic-stats img-rounded" %>
+        <%= image_tag @user.avatar.url, class: "pic-user-stats" %>
       </div>
       <div class="col-md-9">
         <h3><%= @user.name %></h3>
@@ -13,7 +14,7 @@
     <p><i class="fa fa-map-marker"></i> <%= @user.location %></p>
     <p><i class="fa fa-calendar"></i> Joined <%= @user.created_at.strftime("%B %Y") %></p>
   </div>
-  <div class="col-md-8 col-md-offset-1">
+  <div class="col-md-9 col-md-offset-1">
     <%= render 'user_list' %>
   </div>
 </div>
