--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -24,7 +24,8 @@ body {
   opacity: 50%;
   }
 
- /* Navbar styling */
+
+ /*** Navbar styling ***/
 .navbar-default .navbar-brand  {
   font-family: 'Coffee House', cursive;
   font-size: 30px;
@@ -44,20 +45,29 @@ body {
   color: rebeccapurple;
 }
 
-.user-pic-stats {
+
+/*** Images ***/
+.pic-user-stats {
   height: 72px;
   width: 72px;
-}
-
-.user-pic-nav {
-  height: 20px;
-  width: 20px;
-}
-
-.user-pic-md {
-  height: 100px;
-  width: 100px;
   border-radius: 35%;
+}
+
+.pic-user-sm {
+  height: 50px;
+  width: 50px;
+  border-radius: 35%;
+}
+
+#pic-user-nav {
+  size: 35px;
+  border-radius: 50%;
+}
+
+/*** Miscellaneous ***/
+#handle {
+  font-size: 18px;
+  color: rgb(29,161,242);
 }
 
 .user-list-wells {
@@ -87,17 +97,22 @@ body {
 }
 
 #link {
-  padding-top: 26px;
+  padding-top: 25px;
   font-size: 20px;
 }
 
-#pad-25 {
+.pad-bot-25 {
   padding-bottom: 25px;
 }
 
-#pad-50 {
+#pad-19 {
   padding-top: 19px;
 }
-#pull-right {
+
+#pad-27 {
+  padding-top: 27px;
+}
+
+.pull-right {
   text-align: right;
 }
