--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <div class='row'>
-      <div class="col-md-3" id='pad-25'><h2>Sign up</h2> </div>
+      <div class="col-md-3 pad-bot-25"><h2>Sign up</h2> </div>
       <div class='col-md-9' id='link'><%= link_to 'Log in', new_user_session_path %></div>
     </div>    
 
