--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -1,22 +1,48 @@
-<h1>@<%= @user.username %>'s Profile & Tweets</h1>
-<p><%= image_tag @user.avatar.url, size:95, id: "user-pic-nav" %></p>
-<p><%= @user.name %></p>
-<p><%= @user.location %></p>
-<p><%= @user.bio %></p>
-
-<p>
-  <% if current_user.following.include?(@user.id) %>
-    <%= link_to "Unfollow", unfollow_path(id: @user.id), class: "btn btn-danger" %>
-  <% else %>
-    <% if current_user.id != @user.id %>
-      <%= link_to "Follow", now_following_path(id: @user.id), class: "btn btn-primary" %>
-    <% end %>
-  <% end %>
-</p>
-
-<% @user.tweets.each do |tweet| %>
-  <div>
-    <p>@<%= @user.username %></p>
-    <p><%= tweet.message.html_safe %></p>
+<h2>@<%= @user.username %>'s Profile & Tweets</h2>
+<div class="row">
+  <div class="col-md-3 well">
+    <div class="row">
+      <div class="col-md-3">
+        <%= image_tag @user.avatar.url, class: "pic-user-stats" %>
+      </div>
+      <div class="col-md-5 col-md-offset-1">
+        <p>
+          <strong><%= @user.name %></strong>
+        </p>
+        <p>
+          @<%= "#{@user.username}" %>
+        </p>
+      </div>
+    </div>  
+    <div class='row'>
+      <div class='col-md-offset-1 mtop-10'>
+        <em><%= @user.location %></em>
+        <p><%= @user.bio %></p>
+      </div>  
+      <p class='center-it' id='pad-19'>
+        <% if current_user.following.include?(@user.id) %>
+          <%= link_to "Unfollow", unfollow_path(id: @user.id), class: "btn btn-danger" %>
+        <% else %>
+          <% if current_user.id != @user.id %>
+            <%= link_to "Follow", now_following_path(id: @user.id), class: "btn btn-primary" %>
+          <% end %>
+        <% end %>
+      </p>
+    </div>
   </div>
-<% end %>
+  <div class="col-md-8 col-md-offset-1">
+    <div>
+      <% @user.tweets.each do |tweet| %>
+        <div class="well">
+          <p>
+            <%= image_tag tweet.user.avatar.url, class: "pic-user-sm" %>&nbsp;
+            <%= tweet.user.name %> 
+            @<%= tweet.user.username %>
+            &#8226; <%= time_ago_in_words(tweet.created_at) if Time.now - tweet.created_at < 86400 %> <%= tweet.created_at.strftime('%b %e') if Time.now - tweet.created_at > 86400 %> 
+          </p>
+          <p><%= tweet.message.html_safe %></p>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
