--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   <% if current_user.avatar.blank? == false %>
-                    <%= image_tag current_user.avatar.url, size:35, id: "user-pic-nav" %>
+                    <%= image_tag current_user.avatar.url, size:35, id: "pic-user-nav" %>
                   <% end %> 
                   <span id='handle'>@<%= current_user.username %> <span class="caret"></span></a></span>
                 <ul class="dropdown-menu">
