--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -19,7 +19,7 @@
  @import "font-awesome";
 
 body {
-  background: url(<%#= asset_path "bg.jpg" %>) no-repeat;
+  background: url(<%= asset_path "bg2.jpg" %>) no-repeat;
   background-size: cover;
   opacity: 50%;
   }
@@ -27,7 +27,7 @@ body {
 
  /*** Navbar styling ***/
 .navbar-default .navbar-brand  {
-  font-family: 'Coffee House', cursive;
+  font-family: 'Marck Script', cursive;
   font-size: 30px;
   color: rgb(29,161,242);
 }
