--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -18,10 +18,10 @@
       <div class='col-md-offset-1 mtop-10'>
         <em><%= @user.location %></em>
         <p><%= @user.bio %></p>
-      </div>  
+      </div> 
       <p class='center-it' id='pad-19'>
         <% if current_user.following.include?(@user.id) %>
-          <%= link_to "Unfollow", unfollow_path(id: @user.id), class: "btn btn-danger" %>
+          <%= link_to "Following", unfollow_path(id: @user.id), class: "btn btn-primary", id: "unfollow_btn" %>
         <% else %>
           <% if current_user.id != @user.id %>
             <%= link_to "Follow", now_following_path(id: @user.id), class: "btn btn-primary" %>
