set background on tweets

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -21,8 +21,11 @@
 body {
   background: url(<%= asset_path "bg.jpg" %>) no-repeat;
   background-size: cover;
-  opacity: 50%;
   }
+
+.bg {
+  background:rgba(211,211,211,0.6);
+}
 
 
  /*** Navbar styling ***/
