--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -3,31 +3,33 @@
     <%= notice %>
   </p>
 <% end %>
-
-<h1>Tweets Update!</h1>
-<div class='col-md-3 align'>
-  <%= link_to 'New Tweet', new_tweet_path, class: 'btn btn-primary' %>
-</div>
-<br><br>
-<div class='container' id='tweet-block1'>
-  <div class='row'>
-    <div class='col-md-7 marg1'><h3>Tweet</h3></div>
-    <div class='col-md-2'><h3>Tweeter</h3></div>
+<div class='bg'>
+  <br>
+  <h1>Tweets Update!</h1>
+  <div class='col-md-3 align'>
+    <%= link_to 'New Tweet', new_tweet_path, class: 'btn btn-primary' %>
   </div>
-</div>
-
-<div class='container' id='tweet-block2'>
-  <% @tweets.each do |tweet| %>
-    <div class='row marg2'>
-    <hr>
-      <div class='col-md-7 message'><%= tweet.message.html_safe %></div>
-      <div class='col-md-2 message'><%= link_to tweet.user.username, 
-                                        show_user_path(id: tweet.user.id) %></div>
-      <div class='col-md-3'>
-        <%= link_to 'Edit', edit_tweet_path(tweet), class: 'btn btn-success btn-sm' %>
-        <%= link_to 'Delete', tweet, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
-      </div>
+  <br><br>
+  <div class='container' id='tweet-block1'>
+    <div class='row'>
+      <div class='col-md-7 marg1'><h3>Tweet</h3></div>
+      <div class='col-md-2'><h3>Tweeter</h3></div>
     </div>
-  <% end %>
-  <hr>
+  </div>
+
+  <div class='container' id='tweet-block2'>
+    <% @tweets.each do |tweet| %>
+      <div class='row marg2'>
+      <hr>
+        <div class='col-md-7 message'><%= tweet.message.html_safe %></div>
+        <div class='col-md-2 message'><%= link_to tweet.user.username, 
+                                          show_user_path(id: tweet.user.id) %></div>
+        <div class='col-md-3'>
+          <%= link_to 'Edit', edit_tweet_path(tweet), class: 'btn btn-success btn-sm' %>
+          <%= link_to 'Delete', tweet, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+        </div>
+      </div>
+    <% end %>
+    <hr>
+  </div>
 </div>
