--- a/app/views/epicenter/_user_list.html.erb
+++ b/app/views/epicenter/_user_list.html.erb
@@ -4,7 +4,9 @@
       <div class="well user-list-wells">
         <div class="row">
           <div class="col-md-6">
-            <%= image_tag user.avatar.url, class: "pic-user-stats" %>
+            <% if current_user.avatar.url != nil %>
+              <%= image_tag user.avatar.url, class: "pic-user-stats" %>
+            <% end %>  
           </div>
           <div class="col-md-6">
             <p>
