--- a/app/views/epicenter/_user_list.html.erb
+++ b/app/views/epicenter/_user_list.html.erb
@@ -4,7 +4,7 @@
       <div class="well user-list-wells">
         <div class="row">
           <div class="col-md-6">
-            <% if current_user.avatar.url != nil %>
+            <% if user.avatar.url != nil %>
               <%= image_tag user.avatar.url, class: "pic-user-stats" %>
             <% end %>  
           </div>
