--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-3 well">
     <div class="row">
       <div class="col-md-3">
-        <% if current_user.avatar.url != nil %>
+        <% if @user.avatar.url != nil %>
           <%= image_tag @user.avatar.url, class: "pic-user-stats" %>
         <% end %>  
       </div>
@@ -37,7 +37,7 @@
       <% @user.tweets.each do |tweet| %>
         <div class="well">
           <p>
-            <% if current_user.avatar.url != nil %>
+            <% if tweet.user.avatar.url != nil %>
               <%= image_tag tweet.user.avatar.url, class: "pic-user-sm" %>&nbsp;
             <% end %>  
             <%= tweet.user.name %> 
