--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -28,7 +28,7 @@ body {
 }
 
 
- /*** Navbar styling ***/
+/*** Navbar styling ***/
 .navbar-default .navbar-brand  {
   font-family: 'Marck Script', cursive;
   font-size: 30px;
@@ -67,36 +67,15 @@ body {
   border-radius: 50%;
 }
 
-/*** Miscellaneous ***/
-#handle {
-  font-size: 18px;
-  color: rgb(29,161,242);
-}
 
-.user-list-wells {
-  height: 300px;
-}
-
-.gray-text {
-  color: gray;
-}
-
-.mtop-10 {
-  margin-top: 10px;
-}
-
+/*** Miscellaneous (alphabetical order) ***/
 .center-it {
   text-align: center;
 }
 
-.rel-pos {
-  position: relative;
-}
-
-.bottom {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+#handle {
+  font-size: 18px;
+  color: rgb(29,161,242);
 }
 
 #link {
@@ -104,18 +83,30 @@ body {
   font-size: 20px;
 }
 
+.mtop-10 {
+  margin-top: 10px;
+}
+
 .pad-bot-25 {
   padding-bottom: 25px;
 }
 
-#pad-19 {
+#pad-top-19 {
   padding-top: 19px;
 }
 
-#pad-27 {
+#pad-top-27 {
   padding-top: 27px;
+}
+
+.pad-top-125 {
+  padding-top: 125px;
 }
 
 .pull-right {
   text-align: right;
+}
+
+.user-list-wells {
+  height: 300px;
 }
