--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -1,21 +1,18 @@
-// Place all the styles related to the Tweets controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*** Tweets styling ***/
 
-/* Tweets styling */
+.align-r {
+  text-align: right;
+  padding-right: 33px;
+}
+
 .message {
   font-size: 20px;
 }
 
-.marg1 {
-  padding-left: 70px;
-}
-
-.marg2 {
+.pad-left-55 {
   padding-left: 55px;
 }
 
-.align {
-  text-align: right;
-  padding-right: 33px;
+.pad-left-70 {
+  padding-left: 70px;
 }
