--- a/app/views/epicenter/followers.html.erb
+++ b/app/views/epicenter/followers.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-3">
     <div class="row">
       <div class="col-md-3">
-        <% if current_user.avatar.url != nil %>
+        <% if @user.avatar.url != nil %>
           <%= image_tag @user.avatar.url, class: "pic-user-stats" %>
         <% end %>  
       </div>
