--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -21,7 +21,7 @@
         <em><%= @user.location %></em>
         <p><%= @user.bio %></p>
       </div> 
-      <p class='center-it' id='pad-19'>
+      <p class='center-it' id='pad-top-19'>
         <% if current_user.following.include?(@user.id) %>
           <%= link_to "Following", unfollow_path(id: @user.id), class: "btn btn-primary", id: "unfollow_btn" %>
         <% else %>
