--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-6 col-md-offset-3">
     <div class='row'>
       <div class='col-md-6'><h1>New Tweet</h1></div>
-      <div class='col-md-6 pull-right' id='pad-27'><%= link_to 'Back to Homepage', tweets_path, class: 'btn btn-success btn-sm' %></div>
+      <div class='col-md-6 pull-right' id='pad-top-27'><%= link_to 'Back to Homepage', tweets_path, class: 'btn btn-success btn-sm' %></div>
     </div>
     
     <%= render 'form', tweet: @tweet, class: 'btn btn-success' %>
